--- a/locale/ua.json
+++ b/locale/ua.json
@@ -16,12 +16,19 @@
     "selected": "Вибрані",
     "go": "Go",
     "weEmpower": "We empower<br>client <span>to be loved</span>",
+    "weEmpowerSpan": "to be loved",
     "weDeliver": "<span>We deliver</span> <span>what we promise</span>",
     "engagingUser": "Engaging user experience, classy<br>web design & development, unique<br>brand identity solutions to shine.",
     "ourClientsHome": "Our clients get industry leading digital products, all looking into the future. Years pass by and designs we provide are still worthy.",
     "weMake": "We make it possible as 10+ years experience in digital world doesn’t go unnoticed.",
     "gathering": "Gathering the best talents — engineers in minds helps us craft the best thought-out solutions.",
-    "ourTeam": "Our team puts client's<br>business needs above all, and <br>by saying that <span class='gradient-text'>we make communication with <br><span class='last-line'>clients the priority number one.</span></span>",
+    
+    "ourTeamOne": "Our team puts client's",
+    "ourTeamTwo": "business needs above all, and",
+    "ourTeamThree": "by saying that ",
+    "ourTeamSpanOne": "we make communication with",
+    "ourTeamSpanTwo": "clients the priority number one.",
+
     "weveBeen": "We've been researching interfaces in KanapkaMan's secret laboratories with no sleep all days and nights.",
     "needSoftware": "Need a software?",
     "becomeClient": "Become a client",
